[package]
name = "ohos-ime"
version = "0.4.1"
edition = "2021"
description = "Bindings to the `inputmethod` API of OpenHarmony"
license = "Apache-2.0"
repository = "https://github.com/openharmony-rs/ohos-ime"
keywords = ["OpenHarmony", "HarmonyOS", "IME", "inputmethod"]
readme = "README.md"

[dependencies]
ohos-ime-sys = {  version = "0.2.0", features = ["api-12"]}
log = "0.4.22"

[features]
log = []

[package.metadata.docs.rs]
targets = ["aarch64-unknown-linux-ohos", "armv7-unknown-linux-ohos", "x86_64-unknown-linux-ohos"]
all-features = true
